[project]
name = "torch-streamer"
version = "0.0.1"
description = "Streaming convolutions for PyTorch"
authors = [{ name = "Brent M. Spell", email = "brent@brentspell.com" }]
readme = "README.md"
license = { file = "LICENSE" }
urls.Homepage = "https://github.com/brentspell/torch-streamer"
classifiers = [
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
]
dependencies = [
   "numpy",
   "torch",
   "torchaudio",
]
optional-dependencies.dev = [
   # development
   "black",
   "flake8",
   "isort",
   "mypy",
   "pre-commit",
   "pytest-watch",
   "twine",
   "typos",
   "wheel",

   # testing
   "coveralls",
   "hypothesis",
   "pytest",
   "pytest-benchmark",
   "pytest-cov",
]



[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.coverage.report]
exclude_lines = [
   "@abstractmethod",
   "@abc.abstractmethod"
]
